<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_add_photo"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/photo"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/button_choose_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_photo" />

    <com.submission.mystoryappsv2.view.custom.ClearableEditText
        android:id="@+id/ed_add_description"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        app:hint="Description"
        app:buttonDrawable="@drawable/ic_clear" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_story_button" />

</LinearLayout>
